Fixed spacing for Add Contact button

--- a/contacts.html
+++ b/contacts.html
@@ -239,7 +239,7 @@
                 </tbody>
             </table>
             
-            <div style="margin-left: 40px; margin-top: 10px; transition: all .4s ease;">
+            <div class="text-center mt-5">
                 <button class="btn btn-primary" onclick="window.location.href = 'newcontact.html';">Add Contact</button>
             </div>
             
