Cleaned up search button

--- a/contacts.html
+++ b/contacts.html
@@ -223,14 +223,16 @@
                         <th><span>Phone Number</span></th>
                         <th><span>Email Address</span></th>
                         <th><span>Address</span></th>
+
                         <div class="searchContainer">
                             <th>
                                 <!-- Search Bar -->
-                                <input type="text" placeholder="Search for a Contact" id="searchBar">
+                                <input class="border-0" type="text" placeholder="Search for a Contact" id="searchBar">
                                 <button type="button" class="btn btn-primary" onclick="gotoPage(1);">Search</button>
                                 <p class="text-danger" id="contactSearchResult"></p>
                             </th>
-                        </div>                        
+                        </div>
+
                     </tr>
                 </thead>
 
