--- a/contacts.html
+++ b/contacts.html
@@ -12,9 +12,11 @@
 
         <title>Lots of Yachts</title>
     </head>
-    <div style="margin-left: 30px; margin-top: 30px; transition: all .4s ease;">
+
+    <div style="margin-left: 30px; margin-top: 30px;">
         <button class="btn btn-outline-primary" onclick="doLogout();">Logout</button>
     </div>  
+    
     <div class="text-center mt-5">
 
         <form style="max-width: 480px;margin: auto;">
@@ -227,7 +229,7 @@
                         <div class="searchContainer">
                             <th>
                                 <!-- Search Bar -->
-                                <input class="border-0" type="text" placeholder="Search for a Contact" id="searchBar">
+                                <input class="border-0;" type="text" placeholder="Search for a Contact" id="searchBar">
                                 <button type="button" class="btn btn-primary" onclick="gotoPage(1);">Search</button>
                                 <p class="text-danger" id="contactSearchResult"></p>
                             </th>
