Changed order of buttons on edit contact/new user

--- a/contacts.html
+++ b/contacts.html
@@ -30,6 +30,7 @@
     </div>
 
     <style>
+
         .user-list tbody td > img {
             position: relative;
             max-width: 50px;
@@ -229,7 +230,7 @@
                         <div class="searchContainer">
                             <th>
                                 <!-- Search Bar -->
-                                <input class="border-0;" type="text" placeholder="Search for a Contact" id="searchBar">
+                                <input class="border-0" type="text" placeholder="Search for a Contact" id="searchBar">
                                 <button type="button" class="btn btn-primary" onclick="gotoPage(1);">Search</button>
                                 <p class="text-danger" id="contactSearchResult"></p>
                             </th>
