--- a/editcontact.html
+++ b/editcontact.html
@@ -66,8 +66,8 @@
                 </div>
             </form>
             <div>
-                <button class="btn btn-primary" onclick="editContactConfirm();" id="confirmButton">Edit Contact</button> 
-                <button class="btn btn-outline-primary" onclick="window.location.href = 'contacts.html';">Cancel</button>               
+                <button class="btn btn-outline-primary" onclick="window.location.href = 'contacts.html';">Cancel</button>
+                <button class="btn btn-primary" onclick="editContactConfirm();" id="confirmButton">Confirm</button>                                
             </div>
             <span class="text-danger" id="contactEditResult"></span>
         </div>
