--- a/newcontact.html
+++ b/newcontact.html
@@ -67,8 +67,8 @@
 
             </form>
             <div>
-                <button class="btn btn-primary" onclick="addContact();">Create Contact</button>
-                <button class="btn btn-outline-primary" onclick="window.location.href = 'contacts.html';">Cancel</button>            
+                <button class="btn btn-outline-primary" onclick="window.location.href = 'contacts.html';">Cancel</button>
+                <button class="btn btn-primary" onclick="addContact();">Confirm</button>                            
             </div>
             <span class="text-danger" id="contactAddResult"></span>
         </div>
